고쳐줘 델핀

--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -342,3 +342,8 @@ a.homeButton {
 .ContentCard {
     background-color: $table-background-color;
 }
+
+.dash-upper-line-card {
+    fontSize:'0.9rem';
+    color:"#FFFFFF";
+}
