--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -15,7 +15,9 @@ $sidebar-submenu-hover-background-color: #273440;
 $sidebar-menu-active-color: #E9ECEF;
 $sidebar-menu-active-background-color: #273440;
 
-$table-background-color: #8b8b8b;
+$table-background-color: #1c242b;
+$table-border-color: #252b31;
+$table-font-color: rgb(192, 192, 192);
 
 $navbar-color: #FFFFFF;
 
@@ -30,6 +32,7 @@ $theme-color: #30C0AA;
     padding-right: 20px;
     background: #fff;
     height: $footer-height;
+    background-color: #171717;
     /* padding-left: 10px; */
     /* padding-right: 10px; */
 }
@@ -37,6 +40,10 @@ $theme-color: #30C0AA;
 /*
     DEMO STYLE
 */
+
+button.-btn { 
+    background-color:red;
+}
 
 body {
     font-family: 'Noto Sans KR', Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;
@@ -49,6 +56,28 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+a {
+    color: rgb(192, 192, 192);;
+}
+
+a:hover {
+    color: white;
+}
+
+.btn-outline-primary {
+    color: rgb(192, 192, 192);
+    border-color: rgb(192, 192, 192);
+}
+
+.btn-outline-primary:hover {
+    color: rgb(192, 192, 192);
+}
+
+.input-group>.custom-file, .input-group>.custom-select, .input-group>.form-control, .input-group>.form-control-plaintext {
+    background-color: rgba(43, 90, 151, 0.082)
+}
+
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -308,9 +337,9 @@ a.homeButton {
 ----------------------------------------------------- */
 
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    border-left: 1px solid rgb(105, 105, 105);
+    border-right: 1px solid rgb(105, 105, 105);
+    border-bottom: 1px solid rgb(105, 105, 105);
     border-top: 1px solid white;
     padding: 0px;
 }
@@ -323,13 +352,22 @@ a.homeButton {
 /* ---------------------------------------------------
     table
 ----------------------------------------------------- */
+.table {
 
-.table td, .table th {
+}
+
+
+.table td, .table th, .table thead th{
     vertical-align: middle;
     padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
     background-color: $table-background-color;
+    border-color: $table-border-color;
+    border-bottom-color: $table-border-color;
+    border-top-color: $table-border-color;
+    color: $table-font-color;
+
 }
 
 .card-footer {
@@ -343,7 +381,21 @@ a.homeButton {
     background-color: $table-background-color;
 }
 
-.dash-upper-line-card {
-    fontSize:'0.9rem';
-    color:"#FFFFFF";
+.dash-upper-line-card-title {
+    font-size:1.2rem;
+    color: #FFFFFF;
+}
+
+.dash-upper-line-card-value {
+     font-size:1.75rem;
+    font-weight:bold;
+    color: #FFFFFF;
+}
+
+.card {
+    background-color: #1C1C1D;
+}
+
+.card-header {
+    color: #FFFFFF;
 }
