--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -252,6 +252,10 @@ a.homeButton {
     background-color: $table-background-color;
 }
 
+.ReactTable .rt-thead .rt-resizable-header-content {
+    
+}
+
 
 
 /* ---------------------------------------------------
