--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -250,6 +250,7 @@ a.homeButton {
     padding-left: 10px;
     padding-right: 10px;
     background-color: $table-background-color;
+    color: white;
 }
 
 
