--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -47,6 +47,7 @@ button.-btn {
 
 body {
     font-family: 'Noto Sans KR', Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;
+    // font-family: 'Arial';
     // background: #171717
     background: black;
     font-weight: 300;
@@ -65,7 +66,8 @@ a {
 
 a:hover {
     // color: white;
-    color: rgb(192, 192, 192);;
+    color: rgb(192, 192, 192);
+    text-decoration: none;
 }
 
 .btn-outline-primary {
@@ -78,6 +80,24 @@ a:hover {
     color: rgb(192, 192, 192);
     background-color: #4F6228;
     border-color: #4F6228;
+}
+
+.btn-outline-primary:active {
+    color: rgb(192, 192, 192);
+    background-color: #4F6228 !important;
+    border-color: #4F6228 !important;
+}
+
+.btn-outline-primary:focus {
+    color: rgb(192, 192, 192);
+    background-color: #4F6228 !important;
+    border-color: #4F6228 !important;
+}
+
+.btn-outline-primary:visited {
+    color: rgb(192, 192, 192);
+    background-color: #4F6228 !important;
+    border-color: #4F6228 !important;
 }
 
 .input-group>.custom-file, .input-group>.custom-select, .input-group>.form-control, .input-group>.form-control-plaintext {
@@ -316,6 +336,9 @@ a.homeButton {
 .ReactTable .-pagination .-btn {
     background-color:#191919 !important;
     color: white;
+    // background-color:#76B344   !important;
+    // color: black;
+    // border-color: #4F6228;
 }
 
 .ReactTable .-pagination .-btn[disabled] {
@@ -335,6 +358,8 @@ a.homeButton {
 .ReactTable .-pageJump input, .-pagination select {
     background-color: $table-border-color !important;
     color: white;
+    // background-color: #76B344 !important;
+    // color: black;
 }
 
 
@@ -468,7 +493,6 @@ a.homeButton {
     color: $table-font-color;
     border-right: 0px;
     border-left: 0px;
-
 }
 
 .card-footer {
