--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -23,6 +23,34 @@ $navbar-color: #FFFFFF;
 
 $theme-color: #30C0AA;
 
+$originalRed : #F74B4B ;
+$originalOrange : #FD8900 ;
+$originalYellow : #FFD162 ;
+$originalGreen : #7BCC3A ;
+$originalBlue : #0F9EDB ;
+$originalPurple : #B648F6;
+
+$cloudyRed : #DE5959 ;
+$cloudyOrange : #E38417  ;
+$cloudyYellow : #E6C26E ;
+$cloudyGreen : #76B344  ;
+$cloudyBlue : #2192C2 ;
+$cloudyPurple : #AA56DB ;
+
+$darkRed : #8C3C3C;
+$darkOrange : #913D13;
+$darkYellow : #99734D;
+$darkGreen : #4F6228;
+$darkBlue : #166970;
+$darkPurple : #5B3A8A ;
+
+$lightRed : #DEB1B1 ;
+$lightOrange : #E3AE71;
+$lightYellow : #E6DDCA;
+$lightGreen : #9DB38B;
+$lightBlue : #6EA9C2;
+$lightPurple : #CAADDB;
+
 @import './font.scss';
 
 .footer {
@@ -74,6 +102,7 @@ a:hover {
     color: black;
     border-color: #4F6228;
     background-color: #76B344;
+    // background-color: transparent;
 }
 
 .btn-outline-primary:hover {
@@ -525,6 +554,7 @@ a.homeButton {
 
 .card-header {
     color: #FFFFFF;
+    padding-top: '50px';
 }
 
 
@@ -543,13 +573,17 @@ a.homeButton {
     general
 ----------------------------------------------------- */
 
-.copyicon {
-    color: #0F9EDB;
-}
-
 .form-control {
     background-color: $table-background-color !important;
     border: 2px solid $table-border-color !important;
     color: silver;
 }
 
+
+.__react_component_tooltip:active, :focus {
+    &::after{
+        content: 'Copied!';
+        display: none;
+
+    }
+}
