--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -69,6 +69,27 @@ $lightPurple : #CAADDB;
     DEMO STYLE
 */
 
+button.eth:disabled {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin: 0;
+    padding-right: 5px;
+    padding-left: 5px;
+    background-color: $lightGreen;
+    color: black;
+    opacity: 1;
+    font-weight: bold;
+}
+
+button.gasPrice:disabled {
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: #F2D2AA;
+    color: black;
+    opacity: 1;
+    font-weight: bold;
+}
+
 button.-btn { 
     background-color:red;
 }
@@ -85,6 +106,7 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    color: 'inherit' !important;
 }
 
 a {
@@ -273,6 +295,20 @@ a.homeButton {
     }
 }
 
+a.manualButton {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #ffffff !important;
+    background-color: $sidebar-menu-hover-color;
+    opacity: 0.8;
+    
+    &:hover {
+        background: $sidebar-menu-hover-color;
+    }
+}
+
 /* Loading Screen class */
 .kBribD {
     opacity: 0.7;
@@ -341,9 +377,6 @@ a.homeButton {
     background-color: transparent;
 }
 
-// .ReactTable .rt-table {
-//     border: 1px solid $table-border-color;
-// }
 
 .ReactTable .rt-tr-group {
     border-top: 1px solid $table-border-color;
