--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -299,12 +299,14 @@ a.manualButton {
     position: absolute;
     bottom: 0;
     width: 100%;
+    padding-top: 15px;
+    height: 55px;   // footer height
     // margin-bottom: 1rem;
     color: #ffffff !important;
-    // text-align: center;
-    // padding-right: 40px;
-    // background-color: $sidebar-menu-hover-color;
-    opacity: 0.8;
+    text-align: center;
+    padding-right: 40px;
+    background-color: rgba(23,23,23, 0.7);
+    // opacity: 0.5;
     
     &:hover {
         background: $sidebar-menu-hover-color;
@@ -615,10 +617,70 @@ a.manualButton {
 }
 
 
-.__react_component_tooltip:active, :focus {
-    &::after{
-        content: 'Copied!';
-        display: none;
+/* ---------------------------------------------------
+    svg tooltip
+----------------------------------------------------- */
 
-    }
+#tooltip {
+	position: absolute;
+	width: 200px;
+	height: auto;
+    padding: 10px;
+	background-color: rgba(128, 128, 128, 0.4);
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+	-moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+}
+
+#tooltip.hidden {
+	display: none;
+}
+
+#tooltip p {
+	margin: 0;
+	font-size: 16px;
+    line-height: 20px;
+    color: #c0c0c0;
+}
+
+#tooltip strong {
+    line-height: 25px;
+    color: white;
+}
+
+
+
+.scrollbar
+{
+	margin-left: 30px;
+	float: left;
+	height: 300px;
+	width: 65px;
+	background: #F5F5F5;
+	overflow-y: scroll;
+	margin-bottom: 25px;
+}
+
+#style-2::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#style-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #D62929;
 }
