코드 정리 및 favicon 변경

--- a/src/assets/css/style.1.scss
+++ b/src/assets/css/style.1.scss
@@ -665,3 +665,13 @@ a.manualButton {
     background-color: rgba(255,255,255,0.3);
     border-radius: 10px;
 }
+
+html {
+    scrollbar-face-color: #4d4d4d;
+    scrollbar-track-color: black;
+    scrollbar-arrow-color: #4d4d4d;
+    scrollbar-highlight-color: #847A6F;
+    scrollbar-3dlight-color: #4d4d4d;
+    scrollbar-shadow-color: #1B0E01;
+    scrollbar-darkshadow-color: black;
+}
